2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* Gui/CodeGenerationPanelWidget.cs,
	  gtk-gui/MonoDevelop.VBNetBinding.CodeGenerationPanelWidget.cs: Worked on
	  gnome hig compliant alerts.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* VB.glade, Gui/CodeGenerationPanel.cs, Gui/CodeGenerationPanelWidget.cs,
	  VBNetBinding.addin.xml, VBNetBinding.mdp, VBBindingCompilerServices.cs,
	  Project/VBCompilerParameters.cs, Makefile.am: Removed old glade widget,
	  improved option panel a bit.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* VBNetBinding.addin.xml: Update MD version.

2008-01-23  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CodeGenerationPanel.cs: Ensure we don't create subclasses of classes
	  with private fields bound by glade#. It would not work due to bug
	  355228.

2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/EmptyVBFile.xft.xml, templates/EmptyVBProject.xpt.xml,
	  templates/AssemblyInfo.xft.xml, templates/VBGtkSharp2Project.xpt.xml,
	  templates/VBConsoleApplicationProject.xpt.xml: Make template categories
	  translatable.

2008-01-03  Michael Hutchinson <mhutchinson@novell.com> 

	* VBBindingCompilerServices.cs: Update the compiler output parsing regex to
	  handle all vbnc errors and correctly extract file and position info when
	  present.

2008-01-02  Michael Hutchinson <mhutchinson@novell.com> 

	* Parser/Parser.cs: Merge some code from C# binding so that VB parser
	  actually tags classes with the filename in which they're defined. Fixes
	  CodeBehind grouping and double-clicking on items in the class pad.

2008-01-02  Michael Hutchinson <mhutchinson@novell.com> 

	* VBNetBinding.mdp, Makefile.am, VBLanguageBinding.cs, VBCodeGenerator.cs:
	  Import VB.NET CodeDOM generator from Mono to get partial class support
	  and keyword escaping support.

2007-12-31  Michael Hutchinson <mhutchinson@novell.com> 

	* VBNetBinding.addin.xml, VBNetBinding.mdp, templates/AssemblyInfo.xft.xml,