@@ -1,3 +1,10 @@
+2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* VBNetBinding.addin.xml: Use the new mime type extension to register
+	  new file types.
+	* gtk-gui/MonoDevelop.VBNetBinding.CodeGenerationPanelWidget.cs:
+	  Updated.
+
 2008-03-04  Mike Krüger <mkrueger@novell.com> 
 
 	* Gui/CodeGenerationPanelWidget.cs,
